# cpp-23-cmake-project-template

./: CMakeLists.txt
